feat: enhance animations and layout for about, contact, and services pages; improve user engagement

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,14 +5,14 @@ import services from "../data/services.json";
 ---
 
 <Layout title="Services">
-  <div class="section">
+  <div class="section" transition:animate="fade">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <div class="section-heading heading-center">
-            <h1>Quiénes somos</h1>
+            <h1 transition:animate="slide">Quiénes somos</h1>
           </div>
-          <div class="content">
+          <div class="content" transition:animate="slide">
             <div class="img-style">
               <img
                 src="/assets/img/about-img.jpg"
