--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,150 +5,201 @@ import constants from "../../utils/constants";
 ---
 
 <footer class="footer">
-    <div class="footer-main">
-        <div class="container">
-            <div class="row items">
-                <div class="col-xl-3 col-lg-3 col-md-5 col-12 item">
-                    <!-- Begin company info -->
-                    <div class="footer-company-info">
-                        <div class="footer-company-top">
-                            <a href="/" class="logo" title="PathSoft">
-                                <img data-src="/assets/img/logo-trans.png" width="225" height="64" class="lazy" alt="PathSoft" />
-                            </a>
-                            <div class="footer-company-desc">
-                                <p>
-                                    Nuestra empresa desarrolla software de alta calidad y confiabilidad para las necesidades corporativas desde finales de 2013. Somos un equipo de profesionales del
-                                    desarrollo de software e IT soluciones.
-                                </p>
-                            </div>
-                        </div>
-                        <ul class="footer-social-links">
-                            <li>
-                                <a href="https://www.youtube.com/channel/UCNJ_3AxxedNDGDm1foZN_-Q" target="_blank" title="Youtube">
-                                    <svg viewBox="0 0 564 512">
-                                        <use xlink:href="/assets/img/sprite.svg#youtube-icon"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!" target="_blank" title="Facebook">
-                                    <svg viewBox="0 0 320 512">
-                                        <use xlink:href="/assets/img/sprite.svg#facebook-icon"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!" target="_blank" title="Instagram">
-                                    <svg viewBox="0 0 448 512">
-                                        <use xlink:href="/assets/img/sprite.svg#instagram-icon"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!" target="_blank" title="LinkedIn">
-                                    <svg viewBox="0 0 448 512">
-                                        <use xlink:href="/assets/img/sprite.svg#linkedin-icon"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!" target="_blank" title="Twitter">
-                                    <svg viewBox="0 0 512 512">
-                                        <use xlink:href="/assets/img/sprite.svg#twitter-icon"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- End company info -->
-                </div>
-                <div class="col-xl-2 offset-xl-1 col-md-3 col-5 col-lg-2 item">
-                    <div class="footer-item">
-                        <p class="footer-item-heading">Menu</p>
-                        <nav class="footer-nav">
-                            <ul class="footer-mnu">
-                                <li>
-                                    <a href="/about" class="hover-link" data-title="Quiénes somos"><span>Quiénes somos</span></a>
-                                </li>
-                                <li>
-                                    <a href="/services" class="hover-link" data-title="Servicios"><span>Servicios</span></a>
-                                </li>
+  <div class="footer-main">
+    <div class="container">
+      <div class="row items">
+        <div class="col-xl-3 col-lg-3 col-md-5 col-12 item">
+          <!-- Begin company info -->
+          <div class="footer-company-info">
+            <div class="footer-company-top">
+              <a href="/" class="logo" title="RIGON Multiservices">
+                <img
+                  src="/assets/img/logo-trans.png"
+                  width="225"
+                  height="64"
+                  loading="lazy"
+                  alt="RIGON Multiservices"
+                />
+              </a>
+              <div class="footer-company-desc">
+                <p>
+                  Nuestra empresa desarrolla software de alta calidad y
+                  confiabilidad para las necesidades corporativas desde finales
+                  de 2013. Somos un equipo de profesionales del desarrollo de
+                  software e IT soluciones.
+                </p>
+              </div>
+            </div>
+            <ul class="footer-social-links">
+              <li>
+                <a
+                  href="https://www.youtube.com/channel/UCNJ_3AxxedNDGDm1foZN_-Q"
+                  target="_blank"
+                  title="Youtube"
+                >
+                  <svg viewBox="0 0 564 512">
+                    <use xlink:href="/assets/img/sprite.svg#youtube-icon"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#!" target="_blank" title="Facebook">
+                  <svg viewBox="0 0 320 512">
+                    <use xlink:href="/assets/img/sprite.svg#facebook-icon"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#!" target="_blank" title="Instagram">
+                  <svg viewBox="0 0 448 512">
+                    <use xlink:href="/assets/img/sprite.svg#instagram-icon"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#!" target="_blank" title="LinkedIn">
+                  <svg viewBox="0 0 448 512">
+                    <use xlink:href="/assets/img/sprite.svg#linkedin-icon"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#!" target="_blank" title="Twitter">
+                  <svg viewBox="0 0 512 512">
+                    <use xlink:href="/assets/img/sprite.svg#twitter-icon"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- End company info -->
+        </div>
+        <div class="col-xl-2 offset-xl-1 col-md-3 col-5 col-lg-2 item">
+          <div class="footer-item">
+            <p class="footer-item-heading">Menu</p>
+            <nav class="footer-nav">
+              <ul class="footer-mnu">
+                <li>
+                  <a href="/about" class="hover-link" data-title="Quiénes somos"
+                    ><span>Quiénes somos</span></a
+                  >
+                </li>
+                <li>
+                  <a href="/services" class="hover-link" data-title="Servicios"
+                    ><span>Servicios</span></a
+                  >
+                </li>
 
-                                <li>
-                                    <a href="/contact" class="hover-link" data-title="Contáctanos"><span>Contáctanos</span></a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                <div class="col-xl-2 col-lg-3 col-md-3 col-7 item">
-                    <div class="footer-item">
-                        <p class="footer-item-heading">Ofrecemos</p>
-                        <nav class="footer-nav">
-                            <ul class="footer-mnu">
-                                <li>
-                                    <a href="/services" class="hover-link" data-title="Soluciones informáticas"><span>Soluciones informáticas</span></a>
-                                </li>
-                                <li>
-                                    <a href="#!" class="hover-link" data-title="Asesoramiento tecnológico"><span>Asesoramiento tecnológico</span></a>
-                                </li>
-                                <li>
-                                    <a href="#!" class="hover-link" data-title="Cableado estructurado"><span>Cableado y estructurado</span></a>
-                                </li>
-                                <li>
-                                    <a href="#!" class="hover-link" data-title="Sistema CCTV"><span>Sistema CCTV</span></a>
-                                </li>
-                                <li>
-                                    <a href="#!" class="hover-link" data-title="Diseños personalizados"><span>Diseños personalizados</span></a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                <div class="col-xs-4 col-lg-4 col-12 item">
-                    <div class="footer-item">
-                        <p class="footer-item-heading">Contacto</p>
-                        <ul class="footer-contacts">
-                            <li>
-                                <i class="material-icons md-22">location_on</i>
-                                <a href={constants.GOOGLE_MAP_ADDRESS}>
-                                    {constants.ADDRESS}
-                                </a>
-                            </li>
-                            <li>
-                                <i class="material-icons md-22 footer-contact-tel">smartphone</i>
-                                <div class="footer-contact-info">
-                                    <a href="#!" class="formingHrefTel">{constants.MOBILE_MAIN}</a>
-                                    <a href="#!" class="formingHrefTel">{constants.MOBILE_SECONDARY}</a>
-                                </div>
-                            </li>
-                            <li>
-                                <i class="material-icons md-22 footer-contact-email">email</i>
-                                <div class="footer-contact-info">
-                                    <a href="mailto:rigon@gmail.com">{constants.EMAIL}</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+                <li>
+                  <a href="/contact" class="hover-link" data-title="Contáctanos"
+                    ><span>Contáctanos</span></a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
-    </div>
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="row justify-content-between items">
-                <div class="col-md-auto col-12 item">
-                    <nav class="footer-links">
-                        <ul>
-                            <li><a href="/terms-and-conditions">Términos y Condiciones</a></li>
-                            <li><a href="/privacy-policy">Políticas de privacidad</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-md-auto col-12 item">
-                    <div class="copyright">© {year} RIGON Multiservices. Todos los derechos reservados.</div>
-                </div>
-            </div>
+        <div class="col-xl-2 col-lg-3 col-md-3 col-7 item">
+          <div class="footer-item">
+            <p class="footer-item-heading">Ofrecemos</p>
+            <nav class="footer-nav">
+              <ul class="footer-mnu">
+                <li>
+                  <a
+                    href="/services"
+                    class="hover-link"
+                    data-title="Soluciones informáticas"
+                    ><span>Soluciones informáticas</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#!"
+                    class="hover-link"
+                    data-title="Asesoramiento tecnológico"
+                    ><span>Asesoramiento tecnológico</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#!"
+                    class="hover-link"
+                    data-title="Cableado estructurado"
+                    ><span>Cableado y estructurado</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#!" class="hover-link" data-title="Sistema CCTV"
+                    ><span>Sistema CCTV</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#!"
+                    class="hover-link"
+                    data-title="Diseños personalizados"
+                    ><span>Diseños personalizados</span></a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
+        <div class="col-xs-4 col-lg-4 col-12 item">
+          <div class="footer-item">
+            <p class="footer-item-heading">Contacto</p>
+            <ul class="footer-contacts">
+              <li>
+                <i class="material-icons md-22">location_on</i>
+                <a href={constants.GOOGLE_MAP_ADDRESS}>
+                  {constants.ADDRESS}
+                </a>
+              </li>
+              <li>
+                <i class="material-icons md-22 footer-contact-tel">smartphone</i
+                >
+                <div class="footer-contact-info">
+                  <a href="#!" class="formingHrefTel">{constants.MOBILE_MAIN}</a
+                  >
+                  <a href="#!" class="formingHrefTel"
+                    >{constants.MOBILE_SECONDARY}</a
+                  >
+                </div>
+              </li>
+              <li>
+                <i class="material-icons md-22 footer-contact-email">email</i>
+                <div class="footer-contact-info">
+                  <a href="mailto:rigon@gmail.com">{constants.EMAIL}</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="row justify-content-between items">
+        <div class="col-md-auto col-12 item">
+          <nav class="footer-links">
+            <ul>
+              <li>
+                <a href="/terms-and-conditions">Términos y Condiciones</a>
+              </li>
+              <li><a href="/privacy-policy">Políticas de privacidad</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="col-md-auto col-12 item">
+          <div class="copyright">
+            © {year} RIGON Multiservices. Todos los derechos reservados.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
